# k-lighter

./: Cargo.toml  README.md  automat.xopp  build.rs  test.html
rsc/: colors.ini
src/: automat.rs  colors.ini  colors.rs  formatter.rs  main.rs  navrh.md  symbols.rs
