[package]
name = "k-lighter"
author = "Ondřej Chwiedziuk"
version = "1.0.0"
edition = "2021"
description = "K-lighter is a syntax highlighter for K language."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
configparser = "3.0.2"
