[package]
name = "k-lighter"
authors = ["Ondřej Chwiedziuk <ondra@chwiedziuk.cz>"]
version = "1.0.2"
edition = "2021"
description = "K-lighter is a syntax highlighter for K language."
license = "MIT"
build = "build.rs"

[[bin]]
name = "k-lighter"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.22", features = ["derive"] }
configparser = "3.0.2"
dirs = "5.0.1"
